--- a/app/views/communities/fuel.html.haml
+++ b/app/views/communities/fuel.html.haml
@@ -9,8 +9,20 @@
   .scrollspy-container{ data: { controller: "scrollspy", bs_spy: "scroll", bs_target: "#jump_nav", bs_smooth_scroll: "true" }, tabindex: "0" }
     - if @community.show_fuel_prices?
       #fuel-prices.scroll-section.mb-5
+        = render 'shared/section_header',
+          icon: 'fuel-pump',
+          title: 'Fuel Prices',
+          description: 'Current and historical price trends for heating fuel and gasoline',
+          anchor: "#fuel-prices"
+        
         = render "communities/#{tab}/fuel_prices"
     
     - if @community.show_bulk_fuel_facilities?
       #bulk-fuel-facilities.scroll-section.mb-5
+        = render 'shared/section_header',
+          icon: 'fuel-pump',
+          title: 'Bulk Fuel Facilities',
+          description: 'Fuel storage capacity, delivery methods, and infrastructure detail',
+          anchor: "#bulk-fuel-facilities"
+        
         = render "communities/#{tab}/bulk_fuel_facilities"
