--- a/app/views/communities/general/_geography.html.haml
+++ b/app/views/communities/general/_geography.html.haml
@@ -1,10 +1,4 @@
--# --- Section Header ---
-= render 'shared/section_header', 
-    icon: 'globe', 
-    title: 'Geography', 
-    description: 'Location and regional associations'
--# --- Section Content ---
-.section-body.m-5
+.section-body.m-5.mt-3
   .p-3.border.rounded-3.h-100.shadow-sm
     .row
       .col-12
