--- a/app/views/communities/general/_legislative_districts.html.haml
+++ b/app/views/communities/general/_legislative_districts.html.haml
@@ -13,13 +13,8 @@
             id: 'layer-senate' |
           } |
         ] |
-      
-= render 'shared/section_header', 
-    icon: 'map', 
-    title: 'Legislative Districts', 
-    description: 'State representation and map boundaries'
 
-.section-body.m-5
+.section-body.m-5.mt-3
   / Map Buttons
   = render 'shared/map_buttons', buttons: legislative_buttons
   
