--- a/app/views/communities/power_generation/_utilities.html.haml
+++ b/app/views/communities/power_generation/_utilities.html.haml
@@ -24,13 +24,7 @@
     } |
   ] |
 
--# --- Section Header ---
-= render 'shared/section_header', 
-    icon: 'buildings', 
-    title: 'Utilities', 
-    description: 'Electrical providers, service areas, and grid infrastructure'
-
-.section-body.mx-md-5.mx-3
+.section-body.m-5.mt-3
   = render 'shared/map_buttons', buttons: map_buttons
 
   -# Data Content Area
