--- a/app/views/communities/electric_rates_sales.html.haml
+++ b/app/views/communities/electric_rates_sales.html.haml
@@ -3,14 +3,28 @@
     { title: 'Rates', anchor: '#rates', icon: 'coin', show: @community.show_rates? }, |
     { title: 'Sales', anchor: '#sales', icon: 'cash-coin', show: @community.show_sales? }, |
   ] |
-
+        
 = turbo_frame_tag "community_tab_content" do
   = render 'shared/tab_nav', links: links
   
   .scrollspy-container{ data: { controller: "scrollspy", bs_spy: "scroll", bs_target: "#jump_nav", bs_smooth_scroll: "true" }, tabindex: "0" }
+    
     - if @community.show_rates?
       #rates.scroll-section.mb-5
+        = render 'shared/section_header',
+          icon: 'coin',
+          title: 'Rates',
+          description: 'Residential, commercial, and industrial electric rate trends',
+          anchor: '#rates'
+
         = render "communities/#{tab}/rates"
+
     - if @community.show_sales?
       #sales.scroll-section.mb-5
+        = render 'shared/section_header',
+          icon: 'cash-coin',
+          title: 'Sales',
+          description: 'Total energy sales and revenue analysis',
+          anchor: '#sales'
+          
         = render "communities/#{tab}/sales"
