--- a/app/views/communities/electric_rates_sales/_rates.html.haml
+++ b/app/views/communities/electric_rates_sales/_rates.html.haml
@@ -1,13 +1,7 @@
 - parent_tab = "electric_rates_sales"
 
--# --- Section Header ---
-= render 'shared/section_header',
-  icon: 'coin',
-  title: 'Rates',
-  description: 'Residential, commercial, and industrial electric rate trends'
-
 -# --- Section Body ---
-.section-body.mx-md-5.mx-3
+.section-body.m-5.mt-3
   .row
     .col-12
       -# Main Data Card
