--- a/app/views/communities/electric_rates_sales/_sales.html.haml
+++ b/app/views/communities/electric_rates_sales/_sales.html.haml
@@ -1,13 +1,7 @@
 - parent_tab = 'electric_rates_sales'
 
--# --- Section Header ---
-= render 'shared/section_header',
-  icon: 'cash-coin',
-  title: 'Sales',
-  description: 'Revenue, energy consumption trends, and customer metrics'
-
 -# --- Section Body ---
-.section-body.mx-md-5.mx-3
+.section-body.m-5.mt-3
   .mb-4
     = render "communities/#{parent_tab}/sales/summary"
 
