--- a/app/views/communities/fuel/_bulk_fuel_facilities.html.haml
+++ b/app/views/communities/fuel/_bulk_fuel_facilities.html.haml
@@ -8,14 +8,7 @@
     } |
   ] |
 
--# --- Section Header ---
-= render 'shared/section_header',
-  icon: 'fuel-pump',
-  title: 'Bulk Fuel Facilities',
-  description: 'Fuel storage capacity, delivery methods, and infrastructure detail'
-
--# --- Section Body ---
-.section-body.mx-md-5.mx-3
+.section-body.m-5.mt-3
   .row.mb-4.g-4
     -# Map Buttons
     .col-12.col-md-4
