--- a/app/views/communities/fuel/_fuel_prices.html.haml
+++ b/app/views/communities/fuel/_fuel_prices.html.haml
@@ -1,27 +1,20 @@
 - parent_tab = "fuel"
-= turbo_frame_tag "community_tab_content" do
-  -# --- Section Header ---
-  = render 'shared/section_header',
-    icon: 'fuel-pump',
-    title: 'Fuel Prices',
-    description: 'Current and historical price trends for heating fuel and gasoline'
 
-  -# --- Section Body ---
-  .section-body.mx-md-5.mx-3
-    .row
-      .col-12
-        -# Main Price Card
-        .p-4.border.rounded-3.bg-white.shadow-sm.mb-4
-          -# Chart Section
-          .mb-5
-            .d-flex.align-items-center.mb-3
-              %i.bi.bi-graph-up-arrow.me-2.text-primary
-              %h6.mb-0.fw-bold Price Trends Over Time
-            = render "communities/#{parent_tab}/fuel_prices/chart"
-          
-          -# Data Table Section
-          .pt-4.border-top
-            .d-flex.align-items-center.mb-3
-              %i.bi.bi-table.me-2.text-primary
-              %h6.mb-0.fw-bold Fuel Price Data
-            = render "communities/#{parent_tab}/fuel_prices/datatable"
+.section-body.m-5.mt-3
+  .row
+    .col-12
+      -# Main Price Card
+      .p-4.border.rounded-3.bg-white.shadow-sm.mb-4
+        -# Chart Section
+        .mb-5
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-graph-up-arrow.me-2.text-primary
+            %h6.mb-0.fw-bold Price Trends Over Time
+          = render "communities/#{parent_tab}/fuel_prices/chart"
+        
+        -# Data Table Section
+        .pt-4.border-top
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h6.mb-0.fw-bold Fuel Price Data
+          = render "communities/#{parent_tab}/fuel_prices/datatable"
