--- a/app/views/communities/general/_transportation.html.haml
+++ b/app/views/communities/general/_transportation.html.haml
@@ -1,8 +1,4 @@
-= render 'shared/section_header', 
-    icon: 'car-front', 
-    title: 'Transportation', 
-    description: 'Transit infrastructure and community mobility'
-.section-body.m-5
+.section-body.m-5.mt-3
   .p-3.border.rounded-3.h-100.shadow-sm
     .mb-4
       = render 'shared/icon_status_grid', 
