--- a/app/views/communities/income.html.haml
+++ b/app/views/communities/income.html.haml
@@ -1,6 +1,10 @@
-- tab = 'income'
-
 = turbo_frame_tag "community_tab_content" do
   -if @community.show_income?
-    .mb-5
-      = render "communities/#{tab}/income"
+    #income.mb-5
+      = render 'shared/section_header',
+        icon: 'cash-coin',
+        title: 'Income',
+        description: 'Household income distribution, median earnings, and poverty metrics',
+        anchor: '#income'
+      
+      = render "communities/income/income"
