--- a/app/views/communities/income/_income.html.haml
+++ b/app/views/communities/income/_income.html.haml
@@ -1,13 +1,6 @@
 - parent_tab = "income"
 
--# --- Section Header ---
-= render 'shared/section_header',
-  icon: 'cash-coin',
-  title: 'Income',
-  description: 'Household income distribution, median earnings, and poverty metrics'
-
--# --- Section Body ---
-.section-body.mx-md-5.mx-3
+.section-body.m-5.mt-3
   .row
     .col-12
       -# Main Data Card
