--- a/app/views/communities/power_generation/_generation.html.haml
+++ b/app/views/communities/power_generation/_generation.html.haml
@@ -2,13 +2,7 @@
 - show_monthly_gen = @community.show_monthly_generation?
 - show_yearly_gen = @community.show_yearly_generation?
 
-= render 'shared/section_header',
-  icon: 'building-gear',
-  title: 'Generation',
-  description: 'Energy generation trends and fuel source mix' do
-  = render "communities/#{parent_tab}/generation/about_modal"
-
-.section-body.mx-md-5.mx-3
+.section-body.m-5.mt-3
   - if show_monthly_gen && show_yearly_gen
     .mb-4
       %ul.nav.nav-pills.bg-white.p-1.rounded.border.d-inline-flex
